--- a/_posts/2018/07/08/2018-07-08-git-usage.md
+++ b/_posts/2018/07/08/2018-07-08-git-usage.md
@@ -2,7 +2,7 @@
 layout: blog
 istop: true
 title: "git使用技巧"
-background-image: https://ss1.bdstatic.com/70cFvXSh_Q1YnxGkpoWK1HF6hhy/it/u=2559393617,1362683786&fm=27&gp=0.jpg
+background-image: https://github.com/Jesse-Lam/jesse-lam.github.io/raw/master/_posts/2018/07/08/git_pic.png
 date:  2018-07-08 17:08:00
 category: git
 tags:
