posts: change vim.md

--- a/_posts/2018/07/08/2018-07-08-vim.md
+++ b/_posts/2018/07/08/2018-07-08-vim.md
@@ -57,6 +57,10 @@ Bundle 'bling/vim-airline'
 set laststatus=2
 let g:airline_powerline_fonts=1
 ```
+
+* 在vim中执行安装：  
+`:BundleInstall`   
+
 * 添加字体：  
 `sudo apt-get install fonts-powerline`  
 * 在terminal设置中选择powerline字体  
@@ -75,6 +79,9 @@ map tb :Tagbar<CR>                        "快捷键设置
 let g:tagbar_ctags_bin='ctags'            "ctags程序的路径
 let g:tagbar_width=30                     "窗口宽度的设置
 ```
+* 在vim中执行安装：  
+`:BundleInstall`  
+
 * 生成tags文件  
 `ctags -R`  
 
@@ -84,4 +91,84 @@ let g:tagbar_width=30                     "窗口宽度的设置
 Ctrl＋］ 跳到当前光标下单词的标签
 Ctrl＋O 返回上一个标签
 Ctrl＋T 返回上一个标签
+```
+
+### molokai语法高亮
+* 在vimrc中添加：  
+`Bundle "tomasr/molokai"`  
+
+* 在vim中执行安装：  
+`:BundleInstall`
+
+### NerdTree
+* 在vimrc中添加：  
+```
+Bundle 'scrooloose/nerdtree'
+let NERDTreeWinPos='right' “窗口位于左边
+let NERDTreeWinSize=30     "窗口宽度的设置
+map tr :NERDTreeToggle<CR> “快捷键设置
+```
+
+* 在vim中执行安装：  
+`:BundleInstall`
+
+* 显示界面如下：
+![vim-nerdtree]({{ site.url_pic }}/_posts/2018/07/08/vim-nerdtree.png)
+
+* 常用快捷键  
+```
+ctrl + w + h 光标 focus 左侧树形目录
+ctrl + w + l 光标 focus 右侧文件显示窗口
+ctrl + w + w 光标自动在左右侧窗口切换
+ctrl + w + r 移动当前窗口的布局位置
+o 在已有窗口中打开文件、目录或书签，并跳到该窗口
+go 在已有窗口 中打开文件、目录或书签，但不跳到该窗口
+t 在新 Tab 中打开选中文件/书签，并跳到新 Tab
+T 在新 Tab 中打开选中文件/书签，但不跳到新 Tab
+i split 一个新窗口打开选中文件，并跳到该窗口
+gi split 一个新窗口打开选中文件，但不跳到该窗口
+s vsplit 一个新窗口打开选中文件，并跳到该窗口
+gs vsplit 一个新 窗口打开选中文件，但不跳到该窗口
+! 执行当前文件
+O 递归打开选中 结点下的所有目录
+x 合拢选中结点的父目录
+X 递归 合拢选中结点下的所有目录
+e Edit the current dif
+双击 相当于 NERDTree-o
+中键 对文件相当于 NERDTree-i，对目录相当于 NERDTree-e
+D 删除当前书签
+P 跳到根结点
+p 跳到父结点
+K 跳到当前目录下同级的第一个结点
+J 跳到当前目录下同级的最后一个结点
+k 跳到当前目录下同级的前一个结点
+j 跳到当前目录下同级的后一个结点
+C 将选中目录或选中文件的父目录设为根结点
+u 将当前根结点的父目录设为根目录，并变成合拢原根结点
+U 将当前根结点的父目录设为根目录，但保持展开原根结点
+r 递归刷新选中目录
+R 递归刷新根结点
+m 显示文件系统菜单
+cd 将 CWD 设为选中目录
+I 切换是否显示隐藏文件
+f 切换是否使用文件过滤器
+F 切换是否显示文件
+B 切换是否显示书签
+q 关闭 NerdTree 窗口
+? 切换是否显示 Quick Help
+```
+
+## 常用技巧  
+
+### 查找与替换  
+指令格式：  
+`:{作用范围}s/{目标}/{替换}/{替换标志}`  
+示例：  
+```
+:%s/foo/bar/g 在全局范围(%)查找foo并替换为bar，所有出现都会被替换(s)
+其他作用范围可以有：
+:s/foo/bar/g 当前行
+:'<,'>s/foo/bar/g 选中选区(在Visual模式下选择区域后，输入:，vim即可自动补全为:'<,'>)
+:5,12s/foo/bar/g 5-12行
+:.,+2s/foo/bar/g 当前行(.)与接下来两行(+2)
 ```
