--- a/_posts/2018/07/11/2018-07-11-rk3288-android5.1-双屏同显.md
+++ b/_posts/2018/07/11/2018-07-11-rk3288-android5.1-双屏同显.md
@@ -2,7 +2,7 @@
 layout: blog
 istop: false
 title: "rk3288 android5.1 双屏同显"
-background-image: https://ss0.bdstatic.com/70cFvHSh_Q1YnxGkpoWK1HF6hhy/it/u=3327870715,981064791&fm=11&gp=0.jpg
+background: blue
 date:  2018-07-11 20:10:00
 category: rk3288
 tags:
@@ -15,7 +15,7 @@ tags:
 RK3288是现在市场上做广告机比较成熟的方案，很多人会有做双屏的需求，这里我把双屏同显的过程做了一遍，这里做了一下笔记。
 
 ## 环境
-硬件：rk3288开发板，hdmi显示器，lcd屏(竖屏)
+硬件：rk3288开发板，hdmi显示器，lcd屏(竖屏)  
 软件：android5.1
 
 ## 步骤
@@ -37,13 +37,14 @@ ro.same.orientation=true
 ro.rotation.external=true
 ro.sf.hwrotation=0
 ro.orientation.einit=90
-```
+```  
 效果如下：  
 ![RK3288_DUAL_DISPLAY2]({{ site.url_pic }}/_posts/2018/07/11/rk3288_dual_display2.png)  
 这是由于hdmi的分辨率为：1280x720(16/9)，屏的分辨率为：1536x2048(3/4)，两个屏之间的宽高比不同，而系统出来都是用同一帧图像出来的，为了保证图像的完整，只能把上下填充为黑色。
 
 * 修复hdmi满屏  
-如果希望hdmi能满屏显示，可以通过修改显示图像的长和宽，但画面会出现拉伸，修改如下：
+如果希望hdmi能满屏显示，可以通过修改显示图像的长和宽，但画面会出现拉伸，修改如下：  
+
 ```
 frameworks/native$ git diff ./
 diff --git a/services/surfaceflinger/DisplayDevice.cpp b/services/surfaceflinger/DisplayDevice.cpp
@@ -61,7 +62,7 @@ index d1c44ee..47512f7 100755
 +
      const int w = mDisplayWidth;
      const int h = mDisplayHeight;
-```
+```  
 效果如下：  
 ![RK3288_DUAL_DISPLAY3]({{ site.url_pic }}/_posts/2018/07/11/rk3288_dual_display3.png)  
 如果想要两个屏都不出现拉伸，只能通过双屏异显(Presentation)来实现。
